# dodoco

./: .editorconfig  .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  super-linter.sh  tsconfig.json  vite.config.ts
.github/: super-linter.env
.github/linters/: .eslintrc.yml  .jscpd.json  .yaml-lint.yml
.github/workflows/: lint.yml  publish.yml
resources/: model.onnx
src/: App.tsx  main.tsx  utils.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/error-serialize-derive/: Cargo.toml
src-tauri/error-serialize-derive/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: analyze.rs  lib.rs  main.rs  read_file.rs  utils.rs
src-tauri/src/analyze/: classify.rs  decode.rs  detect.rs  error.rs  event.rs
src/components/: SpeedDial.tsx  index.ts
src/invoke/: analyze.ts  index.ts  readFile.ts
src/routes/: AnalysisProgress.tsx  ErrorDisplay.tsx  Player.tsx  Settings.tsx  Welcome.tsx  index.ts
src/stores/: createSelectors.ts  index.ts  useConfigStore.ts  usePlayerStateStore.ts
