[package]
name = "dodoco"
version = "1.0.0"
description = "A Tauri App"
authors = ["colazcy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dodoco_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
error-serialize-derive = {path = "./error-serialize-derive"}
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
symphonia = { version = "0.5.4", features = ["all-codecs", "opt-simd"] }
thiserror = "2.0.3"
itertools = "0.13.0"
tauri-plugin-store = "2"
rubato = "0.16.2"
ort = "=2.0.0-rc.9"
num_cpus = "1.16.0"
tauri-plugin-fs = "2"

[profile.dev]
incremental = true
opt-level = 3

[profile.dev.package."*"]
debug=false
